Add min/max char message handling for 'details' field

--- a/templates/submit_success.html
+++ b/templates/submit_success.html
@@ -9,7 +9,7 @@
     <body>
         <div class="form-container" style="text-align: center;">
             {% if name_in_html %}
-                <h2 style="color: green;">Thank you, {{ name_in_html }}!</h2>
+                <h2 style="color: green;">Thank you,<br>{{ name_in_html }}!</h2>
             {% else %}
                 <h2 style="color: green;">Thank you!</h2>
             {% endif %}
