Updated some page text

--- a/templates/public/index.html
+++ b/templates/public/index.html
@@ -36,8 +36,8 @@
             </div>
 
             <div class="service-card">
-                <h3>Compliance Solutions</h3>
-                <p>Specialized consulting for Money Services Businesses (MSB). We handle audits, risk assessments, and regulatory frameworks.</p>
+                <h3>Network Solutions</h3>
+                <p>Stay connected and running with our tailored network services and products. From remote server access for your business, to basic home integrations, we get you plugged in using compliant and secure methods. </p>
             </div>
         </div>
     </div>
