changed title of homepage

--- a/templates/public/index.html
+++ b/templates/public/index.html
@@ -1,6 +1,6 @@
 {% extends "public/base.html" %}
 
-{% block title %}WhizTech | IT Solutions & Compliance{% endblock %}
+{% block title %}WhizTech | IT Solutions {% endblock %}
 
 {% block body_class %}layout-landing{% endblock %}
 
